# prompt-lab

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml
evals/: run_evals.py
evals/dataset/: tasks.json
src/prompt_lab/: __init__.py  api.py  cli.py  client.py  config.py  lab.py  models.py  prompts.py
tests/: conftest.py  test_core.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  types.ts
