[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-lab"
version = "1.0.0"
description = "A tiny evaluation harness as a product — run a prompt over test cases, an independent judge scores pass/fail, and get a pass-rate, the failure pattern, and a suggested better prompt. Its own eval proves the harness discriminates good prompts from bad."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kareem Ghazal" }]
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
prompt-lab = "prompt_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_lab"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests", "evals"]
testpaths = ["tests"]
addopts = "-q"
